@@ -1,3 +1,0 @@
-docs/cf3-reference.info-2
-docs/cf3-reference.info
-docs/cf3-reference.info-1
